--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
 @import url('https://fonts.cdnfonts.com/css/aristotelica-display-trial');
 @import url('https://fonts.cdnfonts.com/css/geo-sans-light');
-@import url('https://fonts.cdnfonts.com/css/autobiography');
+@import url('https://fonts.cdnfonts.com/css/autography');
 
 
 ::selection {
