--- a/css/style.css
+++ b/css/style.css
@@ -155,31 +155,38 @@ header .header-right .hamburger div {
     position: relative;
 }
 
-#ncover {
-    display: block;
-    max-width: 100%; /* Image s'adapte à la largeur disponible */
-    height: auto; /* Conserve les proportions */
-}
+
 
 .text-wrapper {
-    display: flex;
-    justify-content: space-between; /* Sépare les deux phrases sous l'image */
+    display: block;
     width: 100%; /* Adapte la largeur des phrases à celle de l'image */
-    max-width: 800px; /* Fixe une largeur max (ou remplace par un `calc` si besoin) */
     margin-top: 10px;
-    padding: 0 10px; /* Ajoute une marge intérieure pour éviter les bords */
-    box-sizing: border-box; /* Inclut le padding dans la largeur */
+    font-size: 35px;
 }
 
-.titleL, .titleR {
-    font-style: italic;
-    font-family: 'Autography', sans-serif;
-    font-size: 1.2rem; /* Adapte la taille à l'échelle de l'image */
-    white-space: nowrap; /* Empêche un retour à la ligne intempestif */
-    overflow: hidden; /* Cache le contenu débordant */
-    text-overflow: ellipsis; /* Ajoute "..." si nécessaire */
-}
 
+#ncover {
+    height: auto;
+    width: 80%;
+  }
+
+  .titleL {
+    font-style: italic !important;
+    font-family: 'Autography', sans-serif !important;
+    font-size: 45px !important;
+    text-align: left !important;
+    margin-left: 10%;
+  }
+
+
+.titleR {
+    font-style: italic !important;
+    font-family: 'Autography', sans-serif !important;
+    font-size: 45px !important;
+    text-align: right !important;
+    margin-top: 0 !important;
+    margin-right: 10%;
+  }
 
 
 .titleM {
